<resources>
    <string name="app_name">Vexere</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="number_of_seats">Number Of Seats</string>
    <string name="destination">Destination</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="home">Home</string>
    <string name="pay">Pay</string>
    <string name="booking_detail">Booking Detail</string>
    <string name="fill_booking_form">Fill Booking Form</string>
    <string name="admin_page">Admin Page</string>
    <string name="back">Back</string>
    <string name="your_payment_is_successful">Your payment is successful</string>
    <string name="thank_you_for_your_payment">Thank you for your payment.</string>
    <string name="print_pdf">Print PDF</string>
    <string name="check_symbol">check symbol</string>

    <string name="facebook_app_id">774759947319259</string>
    <string name="fb_login_protocol_scheme">fb774759947319259</string>
    <string name="facebook_client_token">56789</string>

    <string name="thong_tin_xe"><u>Thông tin xe</u></string>
    <string name="book">Book</string>
    <string name="delete_blog">Delete Blog</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="add">Add</string>
    <string name="blog_information">Blog Information</string>
    <string name="content">Content</string>
    <string name="enter_content_here">Enter content here</string>
    <string name="enter_title_here">Enter title here</string>
    <string name="title">Title</string>
    <string name="enter_thumbnail_here">Enter thumbnail here</string>
    <string name="this_is_logout_button">this is logout button</string>
    <string name="log_out">Log out</string>
    <string name="add_blog">Add Blog</string>
    <string name="blog_management">Blog Management</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="rating_bar">Rating bar</string>
    <string name="blog_content"><ul><li>WHILE ON BOARD<ul><li>Holding your ticket</li><li>Be silent</li></ul></li><li>YOUR PACKAGE<ul><li>Not over 10kg</li></ul></li></ul></string>
    <!--    New -->
    <string name="login_home"><u>Đăng nhập</u></string>
    <string name="chinh_sach_dat_ve">Bằng việc nhấn nút Tiếp Tục, bạn đồng ý với <u>Chính sách bảo mật thông tin</u> và <u>Quy chế</u></string>
    <string name="logup"><u>Đăng ký</u></string>
    <string name="close"><u>Đóng</u></string>
    <string name="image">Image</string>
    <string name="Intro">Trở thành thành viên</string>
    <string name="service_sentence">Để trải nghiệm dịch vụ</string>
    <string name="ve_huy">Đã hủy</string>
    <string name="ve_chua_thanh_toan">Chưa thanh toán</string>
    <string name="ve_da_thanh_toan">Đã thanh toán</string>
</resources>