<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FillBookingFormActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerContainer"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtFrameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/fill_booking_form"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnBack"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/baseline_arrow_back_10"
            android:contentDescription="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollViewForm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnBook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/custom_form_input"
                    android:drawableStart="@drawable/baseline_person_32"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:padding="12dp"
                    android:textColorHint="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/custom_form_input"
                    android:drawableStart="@drawable/baseline_email_32"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:textColorHint="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtName" />

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/custom_form_input"
                    android:drawableStart="@drawable/baseline_contact_phone_32"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:padding="12dp"
                    android:textColorHint="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

                <EditText
                    android:id="@+id/edtStartTime"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/custom_form_input"
                    android:drawableStart="@drawable/baseline_calendar_month_32"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/start_time"
                    android:inputType="datetime"
                    android:padding="12dp"
                    android:textColorHint="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtPhone" />

                <EditText
                    android:id="@+id/edtEndTime"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/custom_form_input"
                    android:drawableStart="@drawable/baseline_calendar_month_32"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/end_time"
                    android:inputType="datetime"
                    android:padding="12dp"
                    android:textColorHint="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtStartTime" />

                <EditText
                    android:id="@+id/edtDestination"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/custom_form_input"
                    android:drawableStart="@drawable/baseline_place_32"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/destination"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textColorHint="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtEndTime" />

                <EditText
                    android:id="@+id/edtNumOfSeats"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginVertical="32dp"
                    android:background="@drawable/custom_form_input"
                    android:drawableStart="@drawable/baseline_event_seat_32"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/number_of_seats"
                    android:inputType="number"
                    android:padding="12dp"
                    android:textColorHint="@android:color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtDestination" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_button"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btnBook"
        app:layout_constraintEnd_toStartOf="@+id/btnBook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBook" />

    <Button
        android:id="@+id/btnBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/corner_button"
        android:text="@string/book"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCancel" />
</androidx.constraintlayout.widget.ConstraintLayout>